# echtzeit-betriebssysteme

./: .gitignore  README.md
benchmarks/: PATCHED_KERNEL.txt  PLAIN_KERNEL.txt
gpio/: CMakeLists.txt  README.md  gpio.c  gpio.h  main.c  realtime.c  realtime.h  ui.c  ui.h
ui/: README.md  calibration.csv  main.py  requirements.txt  run.sh  test-hydro.csv
